# connect-four

./: .clang-format  .clangd  CMakeLists.txt  Makefile  README.md
src/: client.cpp  main.cpp  server.cpp
src/game/: gameBoard.cpp  gameBoard.hpp  gameManager.cpp  gameManager.hpp  gameSettings.hpp
src/network/: address.hpp  clientSocket.cpp  clientSocket.hpp  message.hpp  networkException.hpp  serverSocket.cpp  serverSocket.hpp  socket.cpp  socket.hpp
